# fusion-engine

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  __init__.py  cli.py  codex_auth.py  fusion.py  panels.py  pyproject.toml  requirements-eval.txt  requirements-server.txt  requirements.txt  server.py
.github/workflows/: ci.yml
evals/: benchmarks.py  graders.py  prepare.py  report.py  run_eval.py  systems.py
evals/datasets/: sample.jsonl
judges/: code_review.md  creative.md  deep_research.md  default.md  tool_synthesis.md
panels/: budget.json  code.json  quality.json  self_fuse.json
tests/: test_codex_auth.py  test_core.py
