[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-engine"
version = "0.1.0"
description = "Parallel multi-model dispatch with judge-based synthesis via OpenRouter."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Fusion Engine contributors" }]
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0",
]
keywords = ["llm", "openrouter", "ensemble", "fusion", "evaluation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
eval = ["datasets>=2.14"]
test = ["pytest>=8.0"]

[project.scripts]
fusion = "cli:main"
fusion-engine = "cli:main"

[tool.setuptools]
py-modules = ["cli", "fusion", "panels", "server"]
